--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+             
+    <dependencies>
+        <!-- Other dependencies -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version> <!-- Use the latest version available -->
+        </dependency>
+    </dependencies>
+
 
         <!-- Data REST -->
         <dependency>
